# vaportpm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/vaportpm-attest/: AWS-NITRO.md  CLAUDE.md  Cargo.toml  GCP.md  README.md
crates/vaportpm-attest/certs/: aws-nitro-root.txt  gcp-ekak-root.txt  pem2txt.sh
crates/vaportpm-attest/src/: a9n.rs  cert.rs  credential.rs  ek.rs  lib.rs  nsm.rs  nv.rs  pcr.rs  roots.rs
crates/vaportpm-verify/: Cargo.toml  README.md  test-gcp-amd-fixture.json  test-gcp-tdx-fixture.json  test-nitro-fixture.json
crates/vaportpm-verify/src/: ephemeral_gcp_tests.rs  ephemeral_nitro_tests.rs  error.rs  flat.rs  flat_tests.rs  gcp.rs  lib.rs  nitro.rs  pcr.rs  test_support.rs  tpm.rs  x509.rs
crates/vaportpm-verify/tests/: gcp.rs  nitro.rs
experiments/alibaba/: .gitignore  NOTES.md  alibaba-trust-us-east-1.sh  aliyun-root-ca.crt
experiments/risc-zero/: Cargo.toml  Makefile  README.md
experiments/risc-zero/methods/: Cargo.toml
experiments/risc-zero/methods/ec-bench/: Cargo.toml
experiments/risc-zero/methods/ec-bench/src/: main.rs
experiments/risc-zero/methods/guest/: Cargo.toml
experiments/risc-zero/methods/guest/src/: main.rs
experiments/risc-zero/src/: host.rs  inputs.rs  lib.rs
experiments/risc-zero/tests/: cycle_count.rs  ec_benchmarks.rs
