[package]
name = "vaportpm-attest"
version = "0.1.0"
edition = "2021"
description = "Cloud vTPM attestation - minimal TPM 2.0 implementation without C dependencies"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

# X.509 certificate parsing
der = { workspace = true }
x509-cert = { workspace = true }

[lib]
name = "vaportpm_attest"
path = "src/lib.rs"

[[bin]]
name = "vaportpm-attest"
path = "src/bin/attest.rs"
