[package]
name = "vaportpm-verify"
version = "0.1.0"
edition = "2021"
description = "Cloud vTPM attestation verification - TPM and Nitro attestation verification"
license.workspace = true

[dependencies]
vaportpm-attest = { path = "../vaportpm-attest" }

# X.509 parsing
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }

# Certificate chain validation (rustls ecosystem)
webpki = { workspace = true }
pki-types = { workspace = true }
rustls-rustcrypto = { workspace = true }

# Signature verification (still needed for TPM AK signature)
p256 = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }

# COSE/CBOR for Nitro
coset = { workspace = true }
ciborium = { workspace = true }

# Common
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "vaportpm_verify"
path = "src/lib.rs"

[[bin]]
name = "selftest-verify"
path = "src/bin/selftest-verify.rs"

[[bin]]
name = "test-verify"
path = "src/bin/test-verify.rs"
