[package]
name = "vaportpm-verify"
version = "0.1.0"
edition = "2021"
description = "Cloud vTPM attestation verification - TPM and Nitro attestation verification"
license.workspace = true

[dependencies]
vaportpm-attest = { path = "../vaportpm-attest" }

# X.509 parsing
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }

# Time types
pki-types = { workspace = true }

# Signature verification
p256 = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }
rsa = { workspace = true }

# COSE/CBOR for Nitro
coset = { workspace = true }
ciborium = { workspace = true }

# Common
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
rcgen = "0.13"
p256 = { workspace = true, features = ["pkcs8"] }
p384 = { workspace = true, features = ["pkcs8"] }

[lib]
name = "vaportpm_verify"
path = "src/lib.rs"

[[bin]]
name = "vaportpm-verify"
path = "src/bin/verify.rs"
