[package]
name = "vaportpm-zk-experiment"
version = "0.1.0"
edition = "2021"

# Standalone workspace - isolated from main project
[workspace]

[dependencies]
# Reference existing crates
vaportpm-verify = { path = "../../crates/vaportpm-verify" }
vaportpm-attest = { path = "../../crates/vaportpm-attest" }

# RISC Zero
risc0-zkvm = "3.0"
vaportpm-zk-methods = { path = "methods" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
serde-big-array = "0.5"

# Time
pki-types = { package = "rustls-pki-types", version = "1.13" }

[dev-dependencies]
# For integration tests
