[package]
name = "ec-bench-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
p384 = { version = "=0.13.0", default-features = false, features = ["ecdsa"] }
ecdsa = { version = "0.16", default-features = false }
sha2 = "0.10"
hex-literal = "0.4"

[patch.crates-io]
# RISC Zero accelerated crypto
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

# Unified P-256/P-384 RISC Zero acceleration (local fork)
p256 = { path = "../../rustcrypto-elliptic-curves/p256" }
p384 = { path = "../../rustcrypto-elliptic-curves/p384" }
primeorder = { path = "../../rustcrypto-elliptic-curves/primeorder" }
