[package]
name = "vaportpm-zk-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
vaportpm-verify = { path = "../../../../crates/vaportpm-verify" }
vaportpm-attest = { path = "../../../../crates/vaportpm-attest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
serde-big-array = "0.5"
sha2 = "0.10"
rsa = "=0.9.9"  # Force version for risczero patch
pki-types = { package = "rustls-pki-types", version = "1.13" }

[patch.crates-io]
# RISC Zero accelerated crypto
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.9-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
